src/snapshots/sel__parse__test-11.snap
---
source: src/parse.rs
expression: "t(b\"a=b\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Pair {
                            fst: Word {
                                loc: Location(
                                    0,
                                    0..1,
                                ),
                                word: "a",
                            },
                            loc_equal: Location(
                                0,
                                1..2,
                            ),
                            snd: Word {
                                loc: Location(
                                    0,
                                    2..3,
                                ),
                                word: "b",
                            },
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [],
)
