src/snapshots/sel__parse__test-12.snap
---
source: src/parse.rs
expression: "t(b\"a=b=c\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Pair {
                            fst: Word {
                                loc: Location(
                                    "<test>",
                                    0..1,
                                ),
                                word: "a",
                            },
                            loc_equal: Location(
                                "<test>",
                                1..2,
                            ),
                            snd: Pair {
                                fst: Word {
                                    loc: Location(
                                        "<test>",
                                        2..3,
                                    ),
                                    word: "b",
                                },
                                loc_equal: Location(
                                    "<test>",
                                    3..4,
                                ),
                                snd: Word {
                                    loc: Location(
                                        "<test>",
                                        4..5,
                                    ),
                                    word: "c",
                                },
                            },
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [],
)
