src/snapshots/sel__parse__test-13.snap
---
source: src/parse.rs
expression: "t(b\"a=[b=c]\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Pair {
                            fst: Word {
                                loc: Location(
                                    0,
                                    0..1,
                                ),
                                word: "a",
                            },
                            loc_equal: Location(
                                0,
                                1..2,
                            ),
                            snd: Subscr {
                                loc_open: Location(
                                    0,
                                    2..3,
                                ),
                                subscr: Script {
                                    head: Apply {
                                        base: Value(
                                            Pair {
                                                fst: Word {
                                                    loc: Location(
                                                        0,
                                                        3..4,
                                                    ),
                                                    word: "b",
                                                },
                                                loc_equal: Location(
                                                    0,
                                                    4..5,
                                                ),
                                                snd: Word {
                                                    loc: Location(
                                                        0,
                                                        5..6,
                                                    ),
                                                    word: "c",
                                                },
                                            },
                                        ),
                                        args: [],
                                    },
                                    tail: [],
                                },
                                loc_close: Location(
                                    0,
                                    6..7,
                                ),
                            },
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [],
)
