src/snapshots/sel__parse__test-17.snap
---
source: src/parse.rs
expression: "t(b\"let 0=a a :ok:\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Binding {
                        loc_let: Location(
                            0,
                            0..3,
                        ),
                        pat: Pair {
                            fst: Number {
                                loc: Location(
                                    0,
                                    4..5,
                                ),
                                number: 0.0,
                            },
                            loc_equal: Location(
                                0,
                                5..6,
                            ),
                            snd: Word {
                                loc: Location(
                                    0,
                                    6..7,
                                ),
                                word: "a",
                            },
                        },
                        res: Word {
                            loc: Location(
                                0,
                                8..9,
                            ),
                            word: "a",
                        },
                        alt: Some(
                            Bytes {
                                loc: Location(
                                    0,
                                    10..14,
                                ),
                                bytes: [
                                    111,
                                    107,
                                ],
                            },
                        ),
                    },
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [],
)
