src/snapshots/sel__parse__test-18.snap
---
source: src/parse.rs
expression: "t(b\"\nlet a\n    [let b\n        a\n        [panic: unreachable:]]\n    [panic: unreachable:]\n\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Binding {
                        loc_let: Location(
                            0,
                            1..4,
                        ),
                        pat: Word {
                            loc: Location(
                                0,
                                5..6,
                            ),
                            word: "a",
                        },
                        res: Subscr {
                            loc_open: Location(
                                0,
                                11..12,
                            ),
                            subscr: Script {
                                head: Apply {
                                    base: Binding {
                                        loc_let: Location(
                                            0,
                                            12..15,
                                        ),
                                        pat: Word {
                                            loc: Location(
                                                0,
                                                16..17,
                                            ),
                                            word: "b",
                                        },
                                        res: Word {
                                            loc: Location(
                                                0,
                                                26..27,
                                            ),
                                            word: "a",
                                        },
                                        alt: None,
                                    },
                                    args: [
                                        Subscr {
                                            loc_open: Location(
                                                0,
                                                36..37,
                                            ),
                                            subscr: Script {
                                                head: Apply {
                                                    base: Value(
                                                        Word {
                                                            loc: Location(
                                                                0,
                                                                37..42,
                                                            ),
                                                            word: "panic",
                                                        },
                                                    ),
                                                    args: [
                                                        Bytes {
                                                            loc: Location(
                                                                0,
                                                                42..56,
                                                            ),
                                                            bytes: [
                                                                32,
                                                                117,
                                                                110,
                                                                114,
                                                                101,
                                                                97,
                                                                99,
                                                                104,
                                                                97,
                                                                98,
                                                                108,
                                                                101,
                                                            ],
                                                        },
                                                    ],
                                                },
                                                tail: [],
                                            },
                                            loc_close: Location(
                                                0,
                                                56..57,
                                            ),
                                        },
                                    ],
                                },
                                tail: [],
                            },
                            loc_close: Location(
                                0,
                                57..58,
                            ),
                        },
                        alt: None,
                    },
                    args: [
                        Subscr {
                            loc_open: Location(
                                0,
                                63..64,
                            ),
                            subscr: Script {
                                head: Apply {
                                    base: Value(
                                        Word {
                                            loc: Location(
                                                0,
                                                64..69,
                                            ),
                                            word: "panic",
                                        },
                                    ),
                                    args: [
                                        Bytes {
                                            loc: Location(
                                                0,
                                                69..83,
                                            ),
                                            bytes: [
                                                32,
                                                117,
                                                110,
                                                114,
                                                101,
                                                97,
                                                99,
                                                104,
                                                97,
                                                98,
                                                108,
                                                101,
                                            ],
                                        },
                                    ],
                                },
                                tail: [],
                            },
                            loc_close: Location(
                                0,
                                83..84,
                            ),
                        },
                    ],
                },
                tail: [],
            },
        ),
    },
    [],
)
