src/snapshots/sel__parse__test-19.snap
---
source: src/parse.rs
expression: "t(b\"use :path: name\")"
---
(
    Top {
        uses: [
            Use {
                loc_use: Location(
                    0,
                    0..3,
                ),
                loc_path: Location(
                    0,
                    4..10,
                ),
                path: [
                    112,
                    97,
                    116,
                    104,
                ],
                loc_prefix: Location(
                    0,
                    11..15,
                ),
                prefix: "name-",
            },
        ],
        defs: [],
        script: None,
    },
    [],
)
