src/snapshots/sel__parse__test-2.snap
---
source: src/parse.rs
expression: "t(b\"-\")"
---
(
    Top {
        uses: [],
        defs: [],
        script: Some(
            Script {
                head: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                0,
                                0..1,
                            ),
                            word: "-",
                        },
                    ),
                    args: [],
                },
                tail: [],
            },
        ),
    },
    [],
)
