src/snapshots/sel__parse__test-21.snap
---
source: src/parse.rs
expression: "t(b\"def succ: y, maths ppl, just y?: add 1,\")"
---
(
    Top {
        uses: [],
        defs: [
            Def {
                loc_def: Location(
                    "<test>",
                    0..3,
                ),
                loc_name: Location(
                    "<test>",
                    4..8,
                ),
                name: "succ",
                loc_desc: Location(
                    "<test>",
                    8..32,
                ),
                desc: "y, maths ppl, just y?",
                to: Apply {
                    base: Value(
                        Word {
                            loc: Location(
                                "<test>",
                                33..36,
                            ),
                            word: "add",
                        },
                    ),
                    args: [
                        Number {
                            loc: Location(
                                "<test>",
                                37..38,
                            ),
                            number: 1.0,
                        },
                    ],
                },
            },
        ],
        script: None,
    },
    [],
)
